# QQAutoReply

./: .gitignore  QQAutoReply.code-workspace  README.md  constants.py  context.py  core.py  main.py  pyproject.toml  requirements.txt  tool.py  ui.py  utils.py
backup/: area_picker.py  coord_picker.py
core/: __init__.py  auto_reply.py  controllable_thread.py  core.py  opencv.py  pause.py  picker.py
cores/: __init__.py  controllable_thread.py  core.py  core_thread.py  ocr.py  opencv.py  qq_ocr_autoreply.py
src/cores/: opencv.py
src/ui/: events.py  update.py
src/utils/: __init__.py  interfaces.py  log_util.py
typings/pubsub/core/: __init__.pyi  annotations.pyi  callables.pyi  listener.pyi  publisher.pyi  topicargspec.pyi  topicdefnprovider.pyi  topicmgr.pyi  topicobj.pyi  topicutils.pyi  weakmethod.pyi
typings/pubsub/utils/: __init__.pyi  notification.pyi
ui/: __init__.py  buttons.py  controllers.py  events.py  labels.py  preset.py  ui.py  update.py  window.py
utils/: __init__.py  controllable_thread.py  event_util.py  interfaces.py  logger_util.py  path_util.py  picker.py  thread_util.py  util.py  utils.py
